--- a/nginx.yaml
+++ b/nginx.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    run: nginx
+    run: nginx-yaml
     method: fromcode
     another: label
-  name: nginx
+  name: nginx-yaml
 spec:
   containers:
     - image: nginx
